# pulsar_spectra

./: .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: docker.yaml  pytest.yaml  ruff.yaml  update_cat_csv.yaml
docs/: bandwidth_intergration.rst  catalogue.rst  conf.py  examples.rst  faq.rst  get_ref_number_freq_range.py  index.rst  installation.rst  modules.rst  papers_in_catalogue.csv  plot_logo.py  plotting.rst  spectral_fit.rst
docs/example_scripts/: adding_your_data.py  broken_power_law_fit.py  creating_a_multi_pulsar_plot.py  estimate_emission_height.py  estimate_flux.py  peak_frequency_lps.py  plot_compare.py  show_altered_uncertainties.py  simple_example.py  vizer_flux_search.py
pulsar_spectra/: analysis.py  catalogue.py  catalogues.py  models.py  spectral_fit.py
pulsar_spectra/catalogue_papers/: Alam_2021.yaml  Alam_2021_raw.csv  Bailes_1997.yaml  Bartel_1978.yaml  Bartel_1978_raw_to_yaml.py  Basu_2016.yaml  Basu_2016_raw_to_yaml.py  Basu_2018.yaml  Bates_2011.yaml  Bates_2011_raw.txt  Bates_2011_raw_to_yaml.py  Bell_2016.yaml  Bell_2016_raw_to_yaml.py  Bhat_2022.yaml  Bhat_2023.yaml  Bhattacharyya_2015.csv  Bhattacharyya_2016.yaml  Biggs_1996.yaml  Bilous_2016.yaml  Bilous_2016_raw.tsv  Bilous_2016_raw_to_yaml.py  Bilous_2020.yaml  Bilous_2020_raw_to_yaml.py  Bondonneau_2020.yaml  Bondonneau_2020_raw_to_yaml.py  Bondonneau_2021.yaml  Bondonneau_2021_raw.csv  Bondonneau_2021_raw_to_yaml.py  Boyles_2012.yaml  Brinkman_2018.yaml  Camilo_1995.yaml  Camilo_1995_raw.csv  Champion_2005.yaml  Champion_2005b.yaml  Crawford_2001.yaml  Crawford_2007.yaml  Crowter_2020.yaml  D.J.Champion_2005.yaml  Dai_2015.yaml  Dai_2015_raw_to_yaml.py  (+197 more)
pulsar_spectra/catalogues/: Bartel_1978.json  Bartel_1978_raw_to_yaml.py  Bates_2011_raw_to_yaml.py  Bondonneau_2020.json  Bondonneau_2020_raw_to_yaml.py  Dai_2015.json  Han_2016_raw_to_yam.py  Hobbs_2004.json  Hobbs_2004_raw.tsv  Hobbs_2004_raw_to_yaml.py  Izvekova_1981.json  Izvekova_1981_raw_to_yaml.py  Johnston_1993.json  Johnston_2006.json  Johnston_2006_raw.txt  Johnston_2006_raw_to_yaml.py  Karastergiou_2005.json  Keith_2011.json  Keith_2011_raw_to_yaml.py  Kijak_2007_raw.txt  Kijak_2007_raw_to_yaml.py  Kijak_2011_raw_to_yaml.py  Kijak_2017_raw.txt  Kijak_2017_raw_to_yaml.py  Lorimer_1995.json  Lorimer_1995_raw_to_yaml.py  Malofeev_2000.json  Malofeev_2000_raw_to_yaml.py  Sieber_1973.json  Sieber_1973_raw_to_yaml.py  Xue_2017.json  Xue_2017_raw.txt  Zakharenko_2013.json  Zakharenko_2013_raw.txt  Zakharenko_2013_raw_to_yaml.py  van_Ommen_1994_2000.json  van_Ommen_1994_raw_to_yaml.py  van_Ommen_1997_raw.txt  van_Ommen_1997_raw_to_yaml.py
pulsar_spectra/catalouges/: Bell_2016.json  Bell_2016_raw.txt  Bell_2016_raw_to_yaml.py  Bilous_2016_raw.txt  Bilous_2016_raw_to_yaml.py  Bondonneau_2020_raw.txt  Johnston_2021.json  Johnston_2021_raw_to_yaml.py  Murphy_2017_raw_table_4.txt  Murphy_2017_raw_to_yaml.py  Stovall_2015_raw.txt  Xue_2017.json  Xue_2017_raw_to_yaml.py  han_2016.json  han_2016_raw.txt  han_2016_raw_to_yam.py
pulsar_spectra/plotting_config/: config.yaml
scripts/: build_config.py  build_plotting_config.py  csv_to_yaml.py  quick_fit.py
scripts/style_files/: default_marker_types.csv
src/pulsar_spectra/: __init__.py  analysis.py  catalogue.py  load_data.py  models.py  spectral_fit.py
src/pulsar_spectra/catalogue_papers/: Alam_2021.yaml  Alam_2021_raw_to_yaml.py  Aloisi_2019.yaml  Bailes_1994.yaml  Bailes_1994_raw.csv  Bailes_1997.yaml  Bangale_2024.yaml  Bartel_1978.yaml  Bartel_1978_raw.csv  Bartel_1978_raw_to_yaml.py  Basu_2016.yaml  Basu_2016_raw.txt  Basu_2016_raw_to_yaml.py  Basu_2018.yaml  Bates_2011.yaml  Bates_2011_raw_to_yaml.py  Bell_2016.yaml  Bell_2016_raw_to_yaml.py  Bhat_2023.yaml  Bhattacharyya_2016.yaml  Biggs_1996.yaml  Bilous_2016.yaml  Bilous_2016_raw.tsv  Bilous_2016_raw_to_yaml.py  Bilous_2020.yaml  Bilous_2020_raw.tsv  Bilous_2020_raw_to_yaml.py  Bondonneau_2020.yaml  Bondonneau_2020_raw_to_yaml.py  Bondonneau_2021.yaml  Bondonneau_2021_raw_to_yaml.py  Boyles_2013.yaml  Brinkman_2018.yaml  Camilo_1995.yaml  Camilo_1995_raw.csv  Camilo_1996.yaml  Camilo_1996_raw.csv  Champion_2005a.yaml  Champion_2005b.yaml  Champion_2008.yaml  (+229 more)
src/pulsar_spectra/configs/: default_markers.csv  plotting_config.yaml
src/pulsar_spectra/scripts/: build_plotting_config.py  csv_to_yaml.py  quick_fit.py
tests/: test_catalogue.py  test_models.py  test_spectral_fit.py
tests/test_data/: best_model_for_Jankowski_2018.tsv
