
[tool.poetry]
name = "pulsar-spectra"
version = "2.1.0"
description = "A simple interface to record pulsar's flux density measurements for a large number of papers and perform fitting of spectral models."
authors = [
    "Nick Swainston <nickaswainston@gmail.com>",
    "Christopher Lee"
]
license = "MIT"
readme = "README.md"
packages = [{include = "pulsar_spectra", from = "src"}]
include = [
    'src/pulsar_spectra/catalogue_papers/*.yaml',
    'src/pulsar_spectra/catalogue_papers/*.db',
    'src/pulsar_spectra/configs/*.yaml',
    'src/pulsar_spectra/configs/*.csv'
]


[tool.poetry.scripts]
quick_fit = "pulsar_spectra.scripts.quick_fit:main"
csv_to_yaml = "pulsar_spectra.scripts.csv_to_yaml:main"
build_plotting_config = "pulsar_spectra.scripts.build_plotting_config:main"


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.13.3"
matplotlib = "^3.4.0"
psrqpy = "^1.2.9"
iminuit = "^2.11.1"
jacobi = "^0.9.2"
PyYAML = "^6.0.1"
pandas = "^1.4.2"
scipy = "^1.13.0"
bilby = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.4.4"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
numpydoc = "^1.7.0"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"
include = [
    "pyproject.toml",
    "docs/*.py",
    "tests/*.py",
    "src/pulsar_spectra/*.py",
    "src/pulsar_spectra/scripts/*.py",
]
exclude = ["src/pulsar_spectra/catalogue_papers/*"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
# Ignore 'line too long' warning
ignore = ["E501"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
